[package]
name = "simple-job-queue"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.68"
futures = "0.3.28"
redis = { version = "0.22.3", features = ["tokio-comp"], optional = true }
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.3.0", features = ["serde", "v4"] }

[features]
default = ["redis"]
redis = ["dep:redis"]
