[package]
name = "simple-job-queue"
description = "A simple job queue"
version = "0.3.1"
edition = "2021"
homepage = "https://github.com/affanshahid/simple-job-queue"
readme = "README.md"
documentation = "https://docs.rs/simple-job-queue"
repository = "https://github.com/affanshahid/simple-job-queue"
keywords = ["jobs", "job-queue"]
license = "MIT"
include = ["src/*.rs", "!src/main.rs", "Cargo.toml"]

[dependencies]
async-trait = "0.1.68"
futures = "0.3.28"
redis = { version = "0.22.3", features = ["tokio-comp"], optional = true }
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.3.0", features = ["serde", "v4"] }

[features]
default = ["redis"]
redis = ["dep:redis"]
